Доделал пользовательскую часть, связал её с бд, делаю администраторскую

--- a/addeventform.ui
+++ b/addeventform.ui
@@ -650,121 +650,9 @@
            <bold>true</bold>
           </font>
          </property>
-         <item>
-          <property name="text">
-           <string>Ученик окончил четверть без троек </string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие учеников в школьном туре олимпиады</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие учеников в окружном туре олимпиады </string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие учеников в городском туре олимпиады </string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие учеников во Всероссийском туре олимпиады</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Призёрство в окружной олимпиаде</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Призёрство в городской олимпиаде</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Призёрство во Всероссийской олимпиаде</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Окружной конкурс (участие)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Гордской конкурс (участие)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Всероссийский конкурс (участие)</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Призёрство в конкурсе</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Разница в среднем балле</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Оформление классного уголка</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие в постановках и открытых уроках</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Посещение театров/музеев</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Помощь школьному совету или педагогу</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Организация мероприятий</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Участие в дне самоуправления</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Снятие фильма о классе</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Победа в школьном мероприятии</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Организация кружка по интересам</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Победа в неожиданном соревновании</string>
-          </property>
-         </item>
+         <property name="currentIndex">
+          <number>-1</number>
+         </property>
         </widget>
        </item>
        <item>
