--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -696,6 +696,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="addEventButton">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>28</height>
+            </size>
+           </property>
            <property name="palette">
             <palette>
              <active>
@@ -720,8 +726,8 @@
               <colorrole role="ButtonText">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
-                 <red>193</red>
-                 <green>0</green>
+                 <red>53</red>
+                 <green>99</green>
                  <blue>0</blue>
                 </color>
                </brush>
@@ -749,8 +755,8 @@
               <colorrole role="ButtonText">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
-                 <red>193</red>
-                 <green>0</green>
+                 <red>53</red>
+                 <green>99</green>
                  <blue>0</blue>
                 </color>
                </brush>
@@ -796,6 +802,58 @@
            </property>
            <property name="text">
             <string>Добавить событие</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="palette">
+            <palette>
+             <active>
+              <colorrole role="ButtonText">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>193</red>
+                 <green>0</green>
+                 <blue>0</blue>
+                </color>
+               </brush>
+              </colorrole>
+             </active>
+             <inactive>
+              <colorrole role="ButtonText">
+               <brush brushstyle="SolidPattern">
+                <color alpha="255">
+                 <red>193</red>
+                 <green>0</green>
+                 <blue>0</blue>
+                </color>
+               </brush>
+              </colorrole>
+             </inactive>
+             <disabled>
+              <colorrole role="ButtonText">
+               <brush brushstyle="SolidPattern">
+                <color alpha="127">
+                 <red>255</red>
+                 <green>255</green>
+                 <blue>255</blue>
+                </color>
+               </brush>
+              </colorrole>
+             </disabled>
+            </palette>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Удалить событие</string>
            </property>
           </widget>
          </item>
